<resources>
  <string name="app_name">app_20250801</string>
  <string name="alert_notification">상단 알림창 사용하기</string>
  <string name="alert_notification_action">상단 알림창의 액션버튼 사용하기</string>
  <string name="alert_notification_remote">상단 알림창에서 원격 입력</string>
  <string name="alert_notification_progress">상단 알림창에 프로그레스바 사용</string>
  <string name="alert_notification_style">상단 알림창 스타일 변경</string>
  <string name="alert_notification_long_text">지난달 31일(현지시각) 포캐스트 인터내셔널 보도에 따르면 마리아 이글 영국 국방장관은 국방전략검토(Strategic Defence Review)에 따라 노후한 호크 T1과 T2 기종을 대체할 경쟁 조달 절차를 공식화했다. 당초 2040년까지 운용할 예정이던 호크 T2는 신뢰성 문제와 함께 변화하는 운용 환경과 정비 문제에 부딪혀 조기 퇴역을 검토하기로 했다. 영국 공군(RAF)은 이번 사업으로 비용 효율이 높은 고속 제트 훈련기를 확보한다는 방침 아래, 선정 기체를 공군 곡예비행팀 레드 애로우(Red Arrows)의 운용기로도 고려하고 있다.</string>
  <string name="btn_toolbar">툴바 사용하기</string>
  <string name="tv_toolbar_title">툴바를 사용한 엑티비티 화면</string>
</resources>